@@ -57,8 +57,9 @@ release {
 def api = project(':yarg-api')
 def core = project(':yarg')
 def console = project(':yarg-console')
+def server = project(':yarg-server')
 
-configure([api, core, console]) {
+configure([api, core, console, server]) {
     sourceSets {
         main {
             java { srcDir 'src' }
@@ -129,8 +130,8 @@ configure(core) {
         compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.9') {
             exclude(group: 'org.apache.poi', module: 'poi')
         }
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.5')
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.5') {
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.7')
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.7') {
             exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
@@ -138,27 +139,75 @@ configure(core) {
             exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
-        compile(group: "org.docx4j", name: "docx4j", version: "3.3.5") {
+        compile(group: "org.docx4j", name: "docx4j", version: "3.3.6") {
             exclude(group: 'org.apache.poi', module: 'poi')
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'log4j', module: 'log4j')
             exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
         }
-        compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "3.3.4") {
+        compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "3.3.6") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'org.apache.poi', module: 'poi')
             exclude(group: 'log4j', module: 'log4j')
             exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
         }
-        compile(group: "org.docx4j", name: "docx4j-export-fo", version: "3.3.4") {
+        compile(group: "org.docx4j", name: "docx4j-export-fo", version: "3.3.6") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'log4j', module: 'log4j')
             exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
         }
+        compile(group: "org.jsoup", name: "jsoup", version: "1.10.3")
         compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.1.0")
+        compile(group: "com.opencsv", name: "opencsv", version: "3.10")
+        compile group: 'org.olap4j', name: 'olap4j', version: '1.2.0'
+        compile(group: "net.sf.jasperreports", name: "jasperreports", version: "6.4.1") {
+            exclude(group: 'org.apache.lucene')
+            exclude(group: 'commons-beanutils', module: 'commons-beanutils')
+            exclude(group: 'com.google.zxing', module: 'core')
+            exclude(group: 'com.ibm.icu', module: 'icu4j')
+            exclude(group: 'com.fasterxml.jackson.core')
+            exclude(group: 'org.jfree')
+            exclude(group: 'org.eclipse.jdt.core.compiler', module: 'ecj')
+            exclude(group: 'com.lowagie', module: 'itext')
+        }
 
         testCompile(group: 'junit', name: 'junit', version: '4.5')
         testCompile(group: 'org.hsqldb', name: 'hsqldb', version: '2.3.3')
+        testCompile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
+    }
+
+    test {
+        maxHeapSize = "512m"
+        jvmArgs '-XX:MaxPermSize=256m'
+        workingDir = new File('../..')
+    }
+}
+
+configure(server) {
+    apply(plugin: 'application')
+
+    dependencies {
+        compile(api)
+        compile(core)
+        compile(console)
+        compile(group: 'com.sparkjava', name: 'spark-core', version: '2.6.0')
+        testCompile(group: 'junit', name: 'junit', version: '4.5')
+    }
+
+    mainClassName = "com.haulmont.yarg.server.ServerRunner"
+
+    configurations.archives.artifacts.removeAll {
+        it.file =~ 'tar' || it.file =~ 'zip'
+    }
+
+    installDist {
+        doLast {
+            def outputDir = destinationDir
+            copy {
+                from "./../../reporting.properties"
+                into "$outputDir/bin"
+            }
+        }
     }
 
     test {
@@ -186,20 +235,11 @@ configure(console) {
         it.file =~ 'tar' || it.file =~ 'zip'
     }
 
-    startScripts {
-        doLast {
-            copy {
-                from "reporting.properties"
-                into outputDir
-            }
-        }
-    }
-
     installDist {
         doLast {
             def outputDir = destinationDir
             copy {
-                from "reporting.properties"
+                from "./../../reporting.properties"
                 into "$outputDir/bin"
             }
         }
